--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -1,27 +1,95 @@
+/*
+> > > Tripster Color Palette < < <
+Light Tan:		#E3D096
+Orange:			#FD9301
+Yellow:			#FFC300
+Light Yellow:   #ffd85b rgba(255, 216, 91, 1)
+Denim: 			#53929B
+Dark Blue:		#2E2A39
+*/
 
-ul {
+.navbar {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
+  height: 60px;
+  width: 100%;
+  top: 0;
+  background-color: rgba(255, 216, 91, 1);
+  box-shadow: 0px -25px 25px 20px rgba(0, 0, 0, 0.4);
+  position: fixed;
   overflow: hidden;
-  background-color: none;
+  z-index: 10;
 }
 
-li {
-  float: right;
+#tripster-logo-nav{
+    float: left;
 }
 
-li a {
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 10px 10px;
-  text-decoration: none;
-  width: 50px;
+#tripster-logo-nav a{
+    padding-left: 30px;
+    padding-right: 6vmax;
+    padding-top: 0px;
+    padding-bottom: 7px;
+    font-size: 30px;
+    text-shadow: 0px 2px 5px rgba(0,0,0,0.15);
+    letter-spacing: 0px;
 }
 
-li a:hover {
-  background-color: white;
+.nav-button{
+    float: left;
+    padding-top: 0px;
+    padding-bottom: 7px;
+    font-size: 30px;
+    padding-right: 0px;
+    text-shadow: 0px 2px 5px rgba(0,0,0,0.15);
+    letter-spacing: 0px;
+    box-shadow: -10px 0px 10px rgba(0,0,0,0.05);
+}
+
+.navbar a{
+    text-decoration: none;
+    text-transform: capitalize;
+    font-family: 'Pacifico';
+    text-shadow: 0px 2px 3px rgba(0,0,0,0.1);
+    display: flex;
+    margin: auto;
+    font-size: 22px;
+    padding: 16px;
+    padding-top: 10px;
+    color: white;
+    font-weight: 500;
+    letter-spacing: 1px;
+    -webkit-text-stroke: 0.5px white;
+}
+
+.nav-button a{
+    padding-right: 4.5vw;
+}
+
+.right-nav-buttons{
+    position: relative;
+    text-align: center;
+    height: 100%;
+    float: right;
+}
+
+.navbar a:hover{
+    background-color: white;
+    color: #ffd85b;
 }
 
 
+/* MOBILE STYLES / STYLES FOR SCREENS BELOW WIDTH = 600 */
+@media only screen and (max-width: 600px) {
+  #tripster-logo-nav a {
+    padding-left: 10px;
+    padding-right: 8px;
+  }
+
+  .navbar a{
+      font-size: 12px;
+      padding-top: 20px;
+      padding-bottom: 20px;
+  }
+}
