--- a/CSS/dont_use_old_navBar.css
+++ b/CSS/dont_use_old_navBar.css
@@ -9,7 +9,7 @@ Denim: 			#53929B
 Dark Blue:		#2E2A39
 */
 
-.navbar {
+.navbar-cust{
   list-style-type: none;
   margin: 0px;
   padding: 0px;
@@ -31,10 +31,9 @@ Dark Blue:		#2E2A39
     padding-left: 30px;
     padding-right: 6vmax;
     padding-top: 0px;
-    padding-bottom: 7px;
-    font-size: 30px;
+    padding-bottom: 0px;
+    font-size: 33px;
     text-shadow: 0px 2px 5px rgba(0,0,0,0.15);
-    letter-spacing: 0px;
 }
 
 .nav-button{
@@ -48,14 +47,12 @@ Dark Blue:		#2E2A39
     box-shadow: -10px 0px 10px rgba(0,0,0,0.05);
 }
 
-.navbar a{
+.navbar-cust a{
     text-decoration: none;
-    text-transform: capitalize;
     font-family: 'Pacifico';
     text-shadow: 0px 2px 3px rgba(0,0,0,0.1);
-    display: flex;
     margin: auto;
-    font-size: 22px;
+    font-size: 24px;
     padding: 16px;
     padding-top: 10px;
     color: white;
@@ -75,7 +72,7 @@ Dark Blue:		#2E2A39
     float: right;
 }
 
-.navbar a:hover{
+.navbar-cust a:hover{
     background-color: white;
     color: #ffd85b;
 }
@@ -88,7 +85,7 @@ Dark Blue:		#2E2A39
     padding-right: 8px;
   }
 
-  .navbar a{
+  .navbar-cust a{
       font-size: 12px;
       padding-top: 20px;
       padding-bottom: 20px;
