--- a/CSS/style.css
+++ b/CSS/style.css
@@ -200,7 +200,7 @@ html, body {
 	position: absolute;
 	bottom: 0;
 	text-align: center;
-	background-color: #53929B;
+	background-color: #07A6B9;
 }
 
 .footer p{
