--- a/CSS/create_styles.css
+++ b/CSS/create_styles.css
@@ -67,9 +67,10 @@ html, body{
     border-width: 0px;
     border-color: #FFD85B;
     color: #F8A900;
+    font-weight: bold;
     background-color: #FFF4CC;
     padding: 15px;
-    padding-left: 10px;
+    padding-left: 20px;
     width: 100%;
     box-shadow: inset 5px 7px 5px 0px rgba(0,0,0,0.07);
 }
@@ -99,16 +100,15 @@ html, body{
 }
 
 .bottom-container{
-
+    padding: 40px;
 }
-
 
 .param-options-container{
     height: 100%;
     width: 100%;
     margin-top: 50px;
-    margin-left: 30px;
-    padding-left: 15px;
+    margin-right: 15px;
+    padding: 0px;
 }
 
 .parameter{
@@ -141,32 +141,47 @@ html, body{
     margin: 0px;
 }
 
-.btn-circle { 
-	width: 40px; 
-	height: 40px; 
-	border-radius: 20px; 
-	font-size: auto; 
-	text-align: center; 
+.btn-circle {
+	width: 40px;
+	height: 40px;
+	border-radius: 20px;
+	font-size: auto;
+	text-align: center;
+}
+
+#accordion{
+    margin: 0px;
+    padding: 0px;
+    margin-left: 15px;
 }
 
 .card-header {
     text-align: center;
     border-radius: 40px;
-    overflow: hidden;
     box-shadow: 2px 5px 15px -5px rgba(0,0,0,0.25);
     background-color: #FFD85B;
     font-family: 'Pacifico', cursive;
     text-shadow: 0px 2px 5px rgba(0,0,0,0.1);
     font-size: 35px;
-}
-.card-header a {
-    color: white;
-    
+    padding: 0px;
 }
 
-#accordion {
-    margin: 30px;
+.card-header a {
+    display: inline-block;
+    height: 100%;
+    color: white;
+    width: 100%;
+    padding: 20px;
 }
+
+.card-header:first-child{
+    border-radius: 10px;
+}
+
 .card {
-    margin: 10px;
+    margin: 0px;
+    margin-top: 20px;
+    border-radius: 10px;
+    background-color: #FFF7DC;
+    border-style: none;
 }
