--- a/CSS/style.css
+++ b/CSS/style.css
@@ -151,14 +151,17 @@ html, body {
 	margin-left: 45px;
 	border: 3px solid  #ffd85b;
 	padding: 11px;
+	color: #FD9301;
 	font-size:17px;
+	font-weight: bold;
 	outline: none;
 	border-radius: 20px;
 	z-index: 0;
+	transition: all ease 0.3s;
 }
 
 .searchterm:focus{
-	color: #FD9301;
+	color: #07A6B9;
 	border:3px solid #fff;
 }
 
@@ -221,4 +224,3 @@ html, body {
 .search a {
 	color: white;
 }
-  
