--- a/CSS/create_styles.css
+++ b/CSS/create_styles.css
@@ -75,7 +75,7 @@ html, body{
     box-shadow: inset 5px 7px 5px 0px rgba(0,0,0,0.07);
 }
 
-.loc-submit{
+.loc-submit {
     border-style: none;
     background-color: #36D0E3;
     color: white;
@@ -88,13 +88,35 @@ html, body{
     margin-right: 2px;
     margin-bottom: 5px;
 }
+.plus-submit {
+    border-style: none;
+    background-color: #36D0E3;
+    color: white;
+    padding: 13px;
+    font-weight: 600;
+    width: 50px;
+    border-radius: 30px;
+    word-wrap: break-word;
+    box-shadow: 2px 5px 0px #07A6B9;
+    margin-right: 2px;
+    margin-bottom: 5px;
+}
+.plus-submit:active{
+    box-shadow: 0px 0px 0px #07A6B9;
+    margin-left: 2px;
+    margin-bottom: 0px;
+}
 
 .loc-submit:active{
     box-shadow: 0px 0px 0px #07A6B9;
     margin-left: 2px;
     margin-bottom: 0px;
 }
-
+.badge {
+    color: white;
+    background-color: #07A6B9;
+    width: inherit;
+}
 .submit-button{
     margin-top: 30px;
 }
@@ -117,11 +139,15 @@ html, body{
     box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 10px;
+    width: inherit;
 }
 
-.parameter p{
+.parameter h5{
     text-align: center;
-    margin-bottom: 0px;
+    margin: 0;
+    padding: 0;
+    font-size: 30px;
+    color: #07A6B9;
 }
 
 .footer-container{
