--- a/CSS/create_styles.css
+++ b/CSS/create_styles.css
@@ -21,7 +21,7 @@ html, body{
 }
 
 #page-wrapper.container-fluid{
-    margin-top: 60px;
+    margin-top: 70px;
     padding: 0px;
     height: 100%;
 }
@@ -101,6 +101,19 @@ html, body{
     margin-right: 2px;
     margin-bottom: 5px;
 }
+.save-submit {
+    border-style: none;
+    background-color: yellowgreen;
+    color: white;
+    padding: 13px;
+    font-weight: 600;
+    width: 100%;
+    border-radius: 30px;
+    word-wrap: break-word;
+    box-shadow: 2px 5px 0px green;
+    margin-right: 2px;
+    margin-bottom: 5px;
+}
 .plus-submit:active{
     box-shadow: 0px 0px 0px #07A6B9;
     margin-left: 2px;
@@ -109,6 +122,11 @@ html, body{
 
 .loc-submit:active{
     box-shadow: 0px 0px 0px #07A6B9;
+    margin-left: 2px;
+    margin-bottom: 0px;
+}
+.save-submit:active{
+    box-shadow: 0px 0px 0px green;
     margin-left: 2px;
     margin-bottom: 0px;
 }
