--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,26 +158,39 @@ html, body {
 	border-radius: 20px;
 	z-index: 0;
 	transition: all ease 0.3s;
+	box-shadow: 2px 5px 0px #a78e3c;
+    margin-right: 2px;
+	margin-bottom: 5px;
 }
 
 .searchterm:focus{
 	color: #07A6B9;
-	border:3px solid #fff;
+	border:3px solid #36D0E3;
+	box-shadow: 2px 5px 0px #07A6B9;
 }
 
 .searchbtn{
 	display: inline-block;
 	width: 50px;
-	height: 50px;
-	margin-left: 10px;
-	padding: 5px;
-	border-style: none;
-	border-radius: 20px;
+	height: 100%;
 	background-color: #ffd85b;
 	text-align: center;
-	color: #fff;
 	cursor: pointer;
 	font-size: 20px;
+	border-style: none;
+    color: white;
+    padding: 13px;
+    font-weight: 600;
+    border-radius: 30px;
+    word-wrap: break-word;
+    box-shadow: 2px 5px 0px #a78e3c;
+    margin-right: 2px;
+	margin-bottom: 5px;
+}
+.searchbtn:active {
+	box-shadow: 0px 0px 0px #a78e3c;
+	margin-left: 2px;
+	margin-bottom: 0px;
 }
 
 #browse-container{
