--- a/CSS/create_styles.css
+++ b/CSS/create_styles.css
@@ -123,18 +123,18 @@ input:focus, button:focus {
 .plus-submit:active{
     box-shadow: 0px 0px 0px #07A6B9;
     margin-left: 2px;
-    margin-bottom: 0px;
+    margin-bottom: 5px;
 }
 
 .loc-submit:active{
     box-shadow: 0px 0px 0px #07A6B9;
     margin-left: 2px;
-    margin-bottom: 0px;
+    margin-bottom: 5px;
 }
 .save-submit:active{
     box-shadow: 0px 0px 0px green;
     margin-left: 2px;
-    margin-bottom: 0px;
+    margin-bottom: 5px;
 }
 .badge {
     color: white;
@@ -234,4 +234,15 @@ input:focus, button:focus {
     border-radius: 10px;
     background-color: #FFF7DC;
     border-style: none;
+}
+
+/* Modal Styling */
+
+.btn-blue {
+    color: white;
+    background-color: #36D0E3;
+}
+.btn-blue:hover {
+    color: white;
+    background-color: #07A6B9;
 }
