--- a/CSS/style.css
+++ b/CSS/style.css
@@ -173,7 +173,7 @@ input:focus {
 
 .searchbtn{
 	display: inline-block;
-	width: 50px;
+	width: 60px;
 	height: 100%;
 	background-color: #ffd85b;
 	text-align: center;
@@ -188,11 +188,13 @@ input:focus {
     box-shadow: 2px 5px 0px #a78e3c;
     margin-right: 2px;
 	margin-bottom: 5px;
+	outline: none;
 }
 .searchbtn:active {
+	outline: none;
 	box-shadow: 0px 0px 0px #a78e3c;
 	margin-left: 2px;
-	margin-bottom: 0px;
+	margin-bottom: 5px;
 }
 
 #browse-container{
@@ -238,4 +240,28 @@ input:focus {
 
 .search a {
 	color: white;
+}
+
+.searchBrowse {
+	width: 70%;
+	margin: auto;
+	margin-left: 45px;
+	border: 3px solid  #ffd85b;
+	padding: 11px;
+	color: #FD9301;
+	font-size:17px;
+	font-weight: bold;
+	outline: none;
+	border-radius: 20px;
+	z-index: 0;
+	transition: all ease 0.3s;
+	box-shadow: 2px 5px 0px #a78e3c;
+    margin-right: 2px;
+	margin-bottom: 5px;
+}
+
+.searchBrowse:focus{
+	color: #07A6B9;
+	border:3px solid #36D0E3;
+	box-shadow: 2px 5px 0px #07A6B9;
 }
