--- a/CSS/create_styles.css
+++ b/CSS/create_styles.css
@@ -234,6 +234,7 @@ input:focus, button:focus {
     border-radius: 10px;
     background-color: #FFF7DC;
     border-style: none;
+}
 /* Modal Styling */
 
 .btn-blue {
