--- a/CSS/register.css
+++ b/CSS/register.css
@@ -34,7 +34,7 @@ html, body{
     width: 100%;
     margin: auto;
     padding: 20px;
-    padding-top: 60px;
+    padding-top: 40px;
     height: auto;
 }
 
@@ -67,8 +67,6 @@ html, body{
     background-color: #FFF4CC;
     padding: 15px;
     padding-left: 20px;
-    margin-top: 8px;
-    margin-left: 5px;
     width: 100%;
     box-shadow: inset 5px 7px 5px 0px rgba(0,0,0,0.07);
 }
@@ -78,8 +76,6 @@ html, body{
 	border:3px solid #36D0E3;
 	box-shadow: 2px 5px 0px #07A6B9;
     font-family: 'Arial' sans-serif;
-    margin-top: 0px;
-    margin-left: 0px;
 }
 
 .input-group {
@@ -104,8 +100,6 @@ html, body{
 a {
   color: red;
 }
-
-/* Set a grey background color and center the text of the "sign in" section */
 
 .footer-container{
     margin: 0px;
@@ -133,11 +127,23 @@ a {
 
     .login-box{
         padding: 20px;
+        margin-top: 20px;
+    }
+
+    .user-input{
+        padding: 2.5px;
+        padding-left: 5px;
     }
 
     .header h2{
-        font-size: 40px;
+        font-size: 30px;
         margin-bottom: 0px;
         padding: 0px;
+    }
+
+    .btn {
+        padding: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
