--- a/CSS/uploadtrip.css
+++ b/CSS/uploadtrip.css
@@ -1,5 +1,7 @@
-body{
+html, body{
 	font-family: arial;
+	margin: 0px;
+	padding: 0px;
 }
 
 #loginstuff {
@@ -8,24 +10,6 @@ body{
   padding: 0;
   overflow: hidden;
   background-color: none;
-}
-
-li {
-  float: right;
-}
-
-li a {
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 10px 10px;
-  text-decoration: none;
-  width: 50px;
-}
-
-
-li a:hover {
-  background-color: white;
 }
 
 .extra_margin {
@@ -46,3 +30,30 @@ h3{
   font-family: 'Pacifico', cursive;
 
 	}
+
+#tripname{
+	margin-top:65px;
+	box-shadow: 0px 0px 60px -10px rgba(0,0,0,0.25);
+}
+#uploadbutton{
+	box-shadow: 0px 0px 60px -10px rgba(0,0,0,0.25);
+
+}
+
+#carouselExampleIndicators{
+margin-top: 65px;
+margin-bottom: 5px;
+}
+
+#rightsideuserinfo{
+	margin-top: 65px;
+	text-align: center
+}
+
+#rightsideprofilepic{
+	box-shadow: 0px 0px 60px -10px rgba(0,0,0,0.25);
+	margin-top: 20px;
+	height:80%;
+	width: 80%;
+
+}
