--- a/CSS/userprofile.css
+++ b/CSS/userprofile.css
@@ -21,11 +21,23 @@ html, body{
 
 h2 {
   font-family: 'Pacifico', cursive;
-
+  margin-top:10px;
+  margin-bottom: 10px;
 }
 
 h3{
   font-family: 'Pacifico', cursive;
-  
+  margin-top:10px;
+  margin-bottom: 10px;
+
 }
 
+#profileimage{
+  box-shadow: 0px 0px 60px -10px rgba(0,0,0,0.25);
+
+}
+
+#backgroundimage{
+  box-shadow: 0px 0px 60px -10px rgba(0,0,0,0.25);
+
+}
