--- a/CSS/userprofile.css
+++ b/CSS/userprofile.css
@@ -1,9 +1,3 @@
-.{
-    margin: 0px;
-    padding: 0px;
-    height: 100%;
-}
-
 html, body{
 	font-family: arial;
 	margin-top: 60px;
@@ -33,11 +27,42 @@ h3{
 }
 
 #profileimage{
-  box-shadow: 0px 0px 60px -10px rgba(0,0,0,0.25);
+  box-shadow: 0px 7px 10px -5px rgba(0,0,0,0.2);
 
 }
 
 #backgroundimage{
-  box-shadow: 0px 0px 60px -10px rgba(0,0,0,0.25);
+  box-shadow: 0px 7px 7px -5px rgba(0,0,0,0.2);
 
+}
+
+.card-header {
+    text-align: center;
+    border-radius: 40px;
+    box-shadow: 2px 5px 15px -5px rgba(0,0,0,0.25);
+    background-color: #FFD85B;
+    font-family: 'Pacifico', cursive;
+    text-shadow: 0px 2px 5px rgba(0,0,0,0.1);
+    font-size: 35px;
+    padding: 0px;
+}
+
+.card-header a {
+    display: inline-block;
+    height: 100%;
+    color: white;
+    width: 100%;
+    padding: 20px;
+}
+
+.card-header:first-child{
+    border-radius: 10px;
+}
+
+.card {
+    margin: 0px;
+    margin-top: 20px;
+    border-radius: 10px;
+    background-color: #FFF7DC;
+    border-style: none;
 }
