--- a/CSS/userprofile.css
+++ b/CSS/userprofile.css
@@ -41,3 +41,12 @@ h3{
   box-shadow: 0px 0px 60px -10px rgba(0,0,0,0.25);
 
 }
+
+#about{
+  margin-top: 50px;
+}
+
+#editprofilebutton{
+  float: right;
+  margin: 5px;
+}
