--- a/CSS/create_styles.css
+++ b/CSS/create_styles.css
@@ -7,6 +7,8 @@ Yellow:			#FFC300
 Light Yellow:   #ffd85b
 Denim: 			#53929B
 Dark Blue:		#2E2A39
+light red:      rgb(230, 71, 71);
+dark red:       rgb(192, 28, 28);
 */
 
 html, body{
@@ -105,6 +107,21 @@ input:focus, button:focus {
     margin-right: 2px;
     margin-bottom: 5px;
 }
+.plus-submit-wypts {
+    border-style: none;
+    background-color: #36D0E3;
+    color: white;
+    padding: 13px;
+    font-size: 5px;
+    text-align: left;
+    width: 37px;
+    height: 37px;
+    border-radius: 20px;
+    word-wrap: break-word;
+    box-shadow: 2px 5px 0px #07A6B9;
+    margin-right: 2px;
+    margin-bottom: 5px;
+}
 .save-submit {
     border-style: none;
     background-color: yellowgreen;
@@ -118,12 +135,20 @@ input:focus, button:focus {
     margin-right: 2px;
     margin-bottom: 5px;
 }
+.minus-submit {
+    background-color: rgb(230, 71, 71);
+    box-shadow: 2px 5px 0px rgb(192, 28, 28);
+}
 .plus-submit:active{
     box-shadow: 0px 0px 0px #07A6B9;
     margin-left: 2px;
     margin-bottom: 5px;
 }
-
+.plus-submit-wypts:active{
+    box-shadow: 0px 0px 0px #07A6B9;
+    margin-left: 2px;
+    margin-bottom: 5px;
+}
 .loc-submit:active{
     box-shadow: 0px 0px 0px #07A6B9;
     margin-left: 2px;
