--- a/CSS/login.css
+++ b/CSS/login.css
@@ -18,6 +18,23 @@ html, body{
     padding: 0px;
 }
 
+.user-input-error{
+    border-style: solid;
+    border-radius: 30px;
+    border-width: 0px;
+    font-family: sans-serif;
+    border:8px solid red;
+    color: #F8A900;
+    font-weight: bold;
+    background-color: #FFF4CC;
+    padding: 15px;
+    padding-left: 20px;
+    margin-top: 8px;
+    margin-left: 5px;
+    width: 100%;
+    box-shadow: inset 5px 7px 5px 0px rgba(0,0,0,0.07);
+}
+
 .bg-image{
     background: linear-gradient(rgba(255, 255, 255, 0.75), 70%, rgba(0, 0, 0, 0.67)), url(../Images/road_img4.jpg);
     background-size: cover;
