--- a/CSS/userprofile.css
+++ b/CSS/userprofile.css
@@ -71,7 +71,9 @@ h3{
   margin-top: 50px;
 }
 
-#editprofilebutton{
-  float: right;
-  margin: 5px;
+.profilebutton{
+	float: right;
+	margin: 5px;
 }
+
+.submissionfield { width: 100%; height: 200px; border: 1px solid #999999;  }
