--- a/CSS/userprofile.css
+++ b/CSS/userprofile.css
@@ -28,11 +28,15 @@ h3{
 
 #profileimage{
   box-shadow: 0px 7px 10px -5px rgba(0,0,0,0.2);
+	width: 300px;
+	height:300px;
 
 }
 
 #backgroundimage{
   box-shadow: 0px 7px 7px -5px rgba(0,0,0,0.2);
+	height:325px;
+	width: 100%;
 
 }
 
@@ -77,3 +81,7 @@ h3{
 }
 
 .submissionfield { width: 100%; height: 200px; border: 1px solid #999999;  }
+
+#UploadProfButton{
+	text-align: center;
+}
