--- a/CSS/create_styles.css
+++ b/CSS/create_styles.css
@@ -46,6 +46,53 @@ html, body{
 #map{
     height: 60vmin;
 }
+
+.loading-message{
+    position: absolute;
+    margin: auto;
+    margin-left: 18%;
+    margin-right: 22%;
+    padding: 30px;
+    font-family: 'Pacifico', cursive;
+    font-size: 4.75vmin;
+    color: white;
+    text-shadow: 0px 2px 5px rgba(0,0,0,0.1);
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 60px;
+  height: 60px;
+  margin: auto;
+  margin-top: 40px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.loading-cover.col-lg-8{
+    opacity: 0;
+    text-align: center;
+    width: 100%;
+    height: 60vmin;
+    position: absolute;
+    background-color: #FFD85B;
+    z-index: -10;
+    transition: opacity 0.5s;
+}
+
 input:focus, button:focus {
     outline: none;
 }
