--- a/CSS/userprofile.css
+++ b/CSS/userprofile.css
@@ -28,15 +28,21 @@ h3{
 
 #profileimage{
   box-shadow: 0px 7px 10px -5px rgba(0,0,0,0.2);
-	width: 300px;
-	height:300px;
+  object-fit: cover;
+	max-width: 300px;
+  max-height:300px;
+  width: auto;
+  height: 100%;
 
 }
 
 #backgroundimage{
   box-shadow: 0px 7px 7px -5px rgba(0,0,0,0.2);
-	height:325px;
-	width: 100%;
+  object-fit: cover;
+	max-height:325px;
+  max-width: 100%;
+  height: auto;
+
 
 }
 
